tests/NormalTests/paczka1/fuzzy1/75830917.err
Error in line 16: S743 A142 12,0
Error in line 20: PRXww1J S743 36,2
Error in line 22: PRXww1J A861 28,5
Error in line 14: ZWhe3ffxN A888 59,2
Error in line 30: ZWhe3ffxN A861 31,8
